Fixed double-click button not working on Firefox

--- a/src/app/cases/edit-page/_case.scss
+++ b/src/app/cases/edit-page/_case.scss
@@ -107,7 +107,9 @@
         }
     }
 
-    button {
+    .button {
+        @include flex-center;
+
         position: relative;
 
         margin-bottom: 0.5rem;
